@@ -25,7 +25,7 @@
     </div>
 {%- endmacro %}
 {%- macro sidebar() %}
-      {%- if builder != 'htmlhelp' %}
+      {%- if not embedded %}
       <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper">
           {%- block sidebarlogo %}
@@ -82,13 +82,15 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     {{ metatags }}
-    {%- if builder != 'htmlhelp' %}
+    {%- if not embedded %}
       {%- set titlesuffix = " &mdash; "|safe + docstitle|e %}
+    {%- else %}
+      {%- set titlesuffix = "" %}
     {%- endif %}
     <title>{{ title|striptags }}{{ titlesuffix }}</title>
     <link rel="stylesheet" href="{{ pathto('_static/' + style, 1) }}" type="text/css" />
     <link rel="stylesheet" href="{{ pathto('_static/pygments.css', 1) }}" type="text/css" />
-    {%- if builder != 'htmlhelp' %}
+    {%- if not embedded %}
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '{{ pathto("", 1) }}',
@@ -141,13 +143,13 @@
 {%- block document %}
     <div class="document">
       <div class="documentwrapper">
-      {%- if builder != 'htmlhelp' %}
+      {%- if not embedded %}
         <div class="bodywrapper">
       {%- endif %}
           <div class="body">
             {% block body %} {% endblock %}
           </div>
-      {%- if builder != 'htmlhelp' %}
+      {%- if not embedded %}
         </div>
       {%- endif %}
       </div>
